Migrations after upgrading to Java 17